# Clang-plugin-CodingStyleCheck

./: LICENSE  README.md
CodingStyleCheck/: CMakeLists.txt  CodingStyleCheck.cpp  CodingStyleCheck.hpp  CustomPluginUtil.hpp
